--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,5 +6,7 @@ spark_usr_dir: "/usr/lib/spark"
 spark_lib_dir: "/var/lib/spark"
 spark_log_dir: "/var/log/spark"
 spark_run_dir: "/run/spark"
+spark_master_url: "spark://localhost:7077"
+spark_role: "slave"
 
 spark_env_extras: {}
