--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,6 +29,8 @@
              dest="/usr/lib"
              copy=no
              creates="/usr/lib/spark-{{ spark_version }}"
+  notify: 
+    - "Restart Spark {{ spark_role }}"
 
 - name: Setup Spark distribution symlinks
   file: src="{{ item.src }}"
@@ -52,3 +54,14 @@
 - name: Configure Spark environment
   template: src=spark-env.sh.j2
             dest="{{ spark_conf_dir }}/conf/spark-env.sh"
+  notify: 
+    - "Restart Spark {{ spark_role }}"
+
+- name: "Install Spark {{ spark_role }} Service"
+  template:
+    src: "spark-{{ spark_role }}.service.j2"
+    dest: "/etc/systemd/system/spark-{{ spark_role }}.service"
+  notify:
+    - Reload systemd
+    - "Restart Spark {{ spark_role }}"
+  when: spark_role
